--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,15 @@ x-superset-volumes: &superset-volumes
   - ./superset-frontend:/app/superset-frontend
   - superset_home:/app/superset_home
   - ./tests:/app/tests
-
+x-environ-base-path: &superset-base-path
+# Set the following variables if you are running superset under a prefixed path.
+# Also set the value in the nginx.conf file
+  ASSET_BASE_URL: ''
+  BASE_PATH: ''
 x-common-build: &common-build
+  args:
+    <<: *superset-base-path
+    PY_VER: 3.10-slim-bookworm
   context: .
   target: dev
   cache_from:
@@ -50,6 +57,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+
   redis:
     image: redis:7
     container_name: superset_cache
@@ -149,6 +157,7 @@ services:
   superset-node:
     image: node:20
     environment:
+      <<: *superset-base-path
       # set this to false if you have perf issues running the npm i; npm run dev in-docker
       # if you do so, you have to run this manually on the host, which should perform better!
       BUILD_SUPERSET_FRONTEND_IN_DOCKER: true
