--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,10 @@
 # -----------------------------------------------------------------------
 x-superset-user: &superset-user root
 x-superset-depends-on: &superset-depends-on
-  - db
-  - redis
+  db:
+    condition: service_healthy
+  redis:
+    condition: service_started
 x-superset-volumes: &superset-volumes
   # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
   - ./docker:/app/docker
@@ -81,6 +83,10 @@ services:
     volumes:
       - db_home:/var/lib/postgresql/data
       - ./docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER --dbname $$POSTGRES_DB" ]
+      interval: 5s
+      retries: 5
 
   superset:
     env_file:
@@ -98,7 +104,10 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     user: *superset-user
-    depends_on: *superset-depends-on
+    depends_on:
+      <<: *superset-depends-on
+      superset-init:
+        condition: service_completed_successfully
     volumes: *superset-volumes
     environment:
       CYPRESS_CONFIG: "${CYPRESS_CONFIG:-}"
@@ -146,7 +155,8 @@ services:
         required: true
       - path: docker/.env-local # optional override
         required: false
-    depends_on: *superset-depends-on
+    depends_on:
+      <<: *superset-depends-on
     user: *superset-user
     volumes: *superset-volumes
     environment:
@@ -169,7 +179,6 @@ services:
         required: true
       - path: docker/.env-local # optional override
         required: false
-    depends_on: *superset-depends-on
     volumes: *superset-volumes
 
   superset-worker:
@@ -185,7 +194,10 @@ services:
     environment:
       CELERYD_CONCURRENCY: 2
     restart: unless-stopped
-    depends_on: *superset-depends-on
+    depends_on:
+      <<: *superset-depends-on
+      superset:
+        condition: service_healthy
     user: *superset-user
     volumes: *superset-volumes
     extra_hosts:
@@ -207,7 +219,10 @@ services:
       - path: docker/.env-local # optional override
         required: false
     restart: unless-stopped
-    depends_on: *superset-depends-on
+    depends_on:
+      <<: *superset-depends-on
+      superset:
+        condition: service_healthy
     user: *superset-user
     volumes: *superset-volumes
     healthcheck:
