refactor(nativeFilters): check if there are any changes)

--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -135,6 +135,7 @@
     "classnames": "^2.2.5",
     "core-js": "^3.37.1",
     "d3-scale": "^2.1.2",
+    "deep-diff": "^1.0.2",
     "dom-to-image-more": "^3.2.0",
     "emotion-rgba": "0.0.12",
     "fast-glob": "^3.2.7",
